...
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_alignParentTop="true"
                        tools:visibility="visible">

                        <ImageView
                            android:id="@+id/iv_ride_map"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/map_placeholder"
                            android:scaleType="centerCrop"
                            app:map="@{viewModel.map}"
                            app:viewModel="@{viewModel}" />
...
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/bottom_gradient" />

                        <TextView
                            android:id="@+id/tv_ride_map"
                            style="@style/RATextView.MontserratLight.Wrap"
                            android:layout_gravity="center"
                            android:text="@string/rate_unable_to_load_map"
                            android:visibility="@{viewModel.shouldDisplayMapError}" />

                        <ProgressBar
                            android:id="@+id/pb_ride_map"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:indeterminate="true"
                            android:indeterminateTint="#4184F3"
                            android:indeterminateTintMode="src_atop"
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/fl_ride_map_container"
                        android:orientation="vertical">

                        <com.rideaustin.ui.widgets.CustomRatingBar
                            android:id="@+id/rb_rate_driver"
                            style="@style/Base.Widget.AppCompat.RatingBar"
                            android:layout_width="220dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="30dp"
                            app:maxStars="5"
                            app:starPadding="4dp" />

                        <TextView
                            android:id="@+id/tv_comment_title"
                            style="@style/RATextView.MontserratLight"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="11dp"
                            android:gravity="center_horizontal"
                            android:textSize="12sp"
                            android:textColor="@color/charcoalGrey"
                            android:text="@{viewModel.riderFeedbackText}"
                            tools:text="@string/rating_feedback_message_text" />

                        <EditText
                            android:id="@+id/edt_leave_comment"
                            style="@style/EditText.LeaveComment"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center_horizontal"
                            android:hint="@string/hint_leave_comment"
...
                                android:layout_height="wrap_content"
                                android:checked="@={viewModel.bevoBucksChecked}"/>

                        </LinearLayout>

                        <RadioGroup
                            android:id="@+id/radio_group_tips"
                            style="@style/RadioGroup.Horizontal.Blue"
                            android:layout_height="@dimen/rounded_radio_group_height"
                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
                            android:layout_marginRight="@dimen/activity_horizontal_margin"
                            android:layout_marginTop="@dimen/rate_driver_divider_margin"
                            android:visibility="@{viewModel.shouldShowTipOption}">
...
                                android:id="@+id/tips_no"
                                style="@style/RadioButton.RoundedBlueButton.Left"
                                android:onClick="@{viewModel.onTipChecked}"
                                android:text="@string/tip_no" />

                            <RadioButton
                                android:id="@+id/tips_one"
                                style="@style/RadioButton.RoundedBlueButton.Center"
                                android:onClick="@{viewModel.onTipChecked}"
                                android:text="@string/tip_one" />

                            <RadioButton
                                android:id="@+id/tips_two"
...
                            android:textSize="12sp"
                            android:textColor="#6D7177"
                            android:text="@{viewModel.summaryDescription}"
                            tools:text="@string/ride_summary_description" />

                        <Button
                            android:id="@+id/btn_submit"
                            style="@style/Button.RoundedBlueButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
...
