...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:background="@color/black_10_opaq"
        tools:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/ride_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
...
                        android:layout_weight="1"
                        android:background="@drawable/driver_details_round_button"
                        android:text="@string/live_eta"
                        android:textSize="12dp" />

                    <Button
                        android:id="@+id/cancel_trip"
                        style="@style/BorderedRoundButton"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
...
                android:layout_centerHorizontal="true"
                android:layout_marginStart="40dp"
                android:elevation="6dp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/driver_image_small"
                    android:layout_width="@dimen/driver_avatar_in_ride_big_version_size"
                    android:layout_height="@dimen/driver_avatar_in_ride_big_version_size"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/ic_launcher" />

...
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@+id/center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/driver_name_small"
                            style="@style/RATextView.MontserratRegular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:maxLines="2"
                            android:text="Jimbo Jimbo"
                            android:textAllCaps="true"
                            android:textColor="@color/charcoalGreyTwo"
                            android:textSize="12dp" />

                        <TextView
                            android:id="@+id/car_category_small"
                            style="@style/RATextView.MontserratRegular"
                            android:layout_width="match_parent"
                            android:layout_height="17dp"
                            android:gravity="center"
                            android:text="SUV"
                            android:textAllCaps="true"
...
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/center"
                        android:orientation="vertical"
                        android:weightSum="1">

                        <TextView
                            android:id="@+id/car_make_small"
                            style="@style/RATextView.MontserratRegular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:maxLines="2"
                            android:text="Range Rover s as s s s s s s"
                            android:textAllCaps="true"
                            android:textColor="@color/charcoalGreyTwo"
                            android:textSize="12dp" />

                        <TextView
                            android:id="@+id/car_plate_small"
                            style="@style/RATextView.MontserratRegular"
                            android:layout_width="match_parent"
                            android:layout_height="17dp"
                            android:layout_weight="0.16"
                            android:gravity="center"
                            android:text="000abcd"
...
